<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainRelative">

    <!--    <androidx.constraintlayout.widget.Group-->
    <!--        android:id="@+id/group"-->
    <!--        android:visibility="gone"-->
    <!--        app:constraint_referenced_ids="butoonCalcular, textViewTitleImc"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent" />-->

    <TextView
        android:id="@+id/textViewTitleImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_imc"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextKg"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="30dp"
        android:hint="@string/peso_imc"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitleImc"
        app:layout_constraintStart_toStartOf="@+id/textViewTitleImc"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleImc" />

    <EditText
        android:id="@+id/editTextAltura"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="30dp"
        android:hint="@string/altura_imc"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/editTextKg"
        app:layout_constraintStart_toStartOf="@id/editTextKg"
        app:layout_constraintTop_toBottomOf="@+id/editTextKg" />

    <Button
        android:id="@+id/butoonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:padding="16dp"
        android:text="@string/button_calcular"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/editTextAltura"
        app:layout_constraintStart_toStartOf="@id/editTextAltura"
        app:layout_constraintTop_toBottomOf="@id/editTextAltura"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="186dp"
        android:layout_height="67dp"
        android:hint="@string/resultado"
        android:textAlignment="center"
        android:text="@string/resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/butoonCalcular"
        app:layout_constraintStart_toStartOf="@+id/butoonCalcular"
        app:layout_constraintTop_toBottomOf="@+id/butoonCalcular"
        app:layout_constraintVertical_bias="0.603" />

</androidx.constraintlayout.widget.ConstraintLayout>