<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainRelative">

<!--    <androidx.constraintlayout.widget.Group-->
<!--        android:id="@+id/group"-->
<!--        android:visibility="gone"-->
<!--        app:constraint_referenced_ids="butoonCalcular, textViewTitleImc"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->

    <TextView
        android:id="@+id/textViewTitleImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_imc"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextKg"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="30dp"
        android:hint="@string/peso_imc"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleImc" />

    <EditText
        android:id="@+id/editTextAltura"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="30dp"
        android:hint="@string/altura_imc"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/editTextKg"
        app:layout_constraintStart_toStartOf="@id/editTextKg"
        app:layout_constraintTop_toBottomOf="@+id/editTextKg" />

    <Button
        android:id="@+id/butoonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="353dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:padding="16dp"
        android:text="@string/button_calcular"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAltura"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="201dp"
        android:layout_height="221dp"
        android:layout_marginStart="35dp"
        android:hint="@string/resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/butoonCalcular"
        app:layout_constraintVertical_bias="0.416" />

    <androidx.constraintlayout.widget.Guideline
        app:layout_constraintGuide_percent="0.50"
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</androidx.constraintlayout.widget.ConstraintLayout>